--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="card-white" id="introduction">
         <h1>Hello, I'm François</h1>
-        <img src="images/profile.jpeg" class="img-circle" width="100px" alt="François Omnes">
+        <img src="profile.jpeg" class="img-circle" width="100px" alt="François Omnes">
         <p>
           I love sports, entrepreneurship, personal development and cars. I launched At Home to improve my skills and creativity.
         </p>
