--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>
           I love sports, entrepreneurship, personal development and cars. I launched At Home to improve my skills and creativity.
         </p>
-        <a href="https://www.figma.com/proto/YsY2GDNwRTgGRgoQkSDoNM/At-Home?page-id=38%3A6&type=design&node-id=43-31&viewport=250%2C264%2C0.13&t=mCtCoVmb1TkrPEdH-1&scaling=min-zoom&starting-point-node-id=43%3A31" class="btn-blue" target="_blank">Discover At Home</a>
+        <a href="https://francois-omnes.github.io/At-home-web-page/" target="_blank">Discover At Home</a>
       </div>
       <div class="card-white">
         
