--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <p>
           I love sports, entrepreneurship, personal development and cars. I launched At Home to improve my skills and creativity.
         </p>
-        <a href="https://francois-omnes.github.io/At-home-web-page/" target="_blank">Discover At Home</a>
+        <a href="https://francois-omnes.github.io/At-home-web-page/" class="btn-blue" target="_blank">Discover At Home</a>
       </div>
       <div class="card-white">
         
         <h2>Sports🏋️</h2>
         <p>
-          I am passionate about <strong>sports</strong>, including <strong>running</strong>, <strong>combat sports</strong>🥊 and <strong>bodybuilding</strong>. I also do <strong>board sports</strong>🏄 when I have time.
+          I am passionate about <strong>sports</strong>, including <strong>running</strong>, <strong>combat sports</strong>🥊 and <strong>gym</strong>. I also do <strong>board sports</strong>🏄 when I have time.
         </p>
       </div>
       <div class="card-white">
